--- a/shard.yml
+++ b/shard.yml
@@ -1,9 +1,13 @@
 name: crystalcoke
-version: 0.0.1
+version: 0.0.6
 
 authors:
   - TorchedSammy
 
+dependencies:
+  phreak:
+    github: shinzlet/phreak
+    
 targets:
   crystalcoke:
     main: src/crystalcoke.cr
